fluxcd/apps/overlays/production/zz-graveyard/kasm/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kasm
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 50Gi
    - metadata:
        name: profiles
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 20Gi
