fluxcd/apps/overlays/production/zz-graveyard/kasm/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kasm-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == any(200, 302)"
        - "[BODY] != pat(*Fairer Pages*)"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    - "kasm.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kasm
          port: 3000
